Fix: #12549 Menubar: Overflow problem

--- a/src/app/components/menubar/menubar.css
+++ b/src/app/components/menubar/menubar.css
@@ -1,6 +1,7 @@
 .p-menubar {
     display: flex;
     align-items: center;
+    overflow: auto;
 }
 
 .p-menubar ul {
